; ModuleID = '/home/carl/AnghaBench/freebsd/bin/sh/extr_output.c_outbin.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/sh/extr_output.c_outbin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.output = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @outbin(i8* %0, i64 %1, %struct.output* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.output*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.output* %2, %struct.output** %6, align 8
  %8 = load i8*, i8** %4, align 8
  store i8* %8, i8** %7, align 8
  br label %9

9:                                                ; preds = %13, %3
  %10 = load i64, i64* %5, align 8
  %11 = add i64 %10, -1
  store i64 %11, i64* %5, align 8
  %12 = icmp ugt i64 %10, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %9
  %14 = load i8*, i8** %7, align 8
  %15 = getelementptr inbounds i8, i8* %14, i32 1
  store i8* %15, i8** %7, align 8
  %16 = load i8, i8* %14, align 1
  %17 = sext i8 %16 to i32
  %18 = load %struct.output*, %struct.output** %6, align 8
  %19 = call i32 @outc(i32 %17, %struct.output* %18)
  br label %9

20:                                               ; preds = %9
  ret void
}

declare dso_local i32 @outc(i32, %struct.output*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
